fix the header blur on ios

--- a/public/styles/_main.css
+++ b/public/styles/_main.css
@@ -53,6 +53,7 @@ header {
     top: 0px;
     background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     z-index: 999;
 }
 
